<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="170dp"
    android:id="@+id/maintoolbar"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/navigationicon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_navigation_menu"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/applicationname"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_profile_icon"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/toolbar_college_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/sisteclogo"/>

        <TextView
            android:id="@+id/toolbar_college_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/collegename"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/toolbar_college_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/CollegeAddress"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.v7.widget.Toolbar>